<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ramhlun S LLTF</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

        <string name="top_icon">TOP ICON</string>
    <string name="chhuahphalna">Ramhlun South\nLLTF chhuah phal dilna</string>
        <string name="hming">Hming</string>
        <string name="phone">Phone</string>
    <string name="chhuahduhchhan">Chhuah duh chhan</string>
    <string name="chhuahduhna">Chhuah duhna</string>
    <string name="chhuahni">Date</string>
    <string name="chhuahhundarkar">Chhuah hun darkar</string>
    <string name="motorhming">Motor hming</string>
    <string name="motor_number">Motor Number</string>
        <string name="submit">Submit</string>
        <string name="forgot_password">FORGOT PASSWORD?</string>
        <string name="or">OR</string>
        <string name="google_icon">google icon</string>
        <string name="facebook_icon">facebook icon</string>
        <string name="new_user_register_now">New User? Register Now</string>


</resources>